--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-   <p>this is new project</p> 
+   <p>this is new project</p>
+   <h2>Aamir has added new paragraph here</h2>
 </body>
 </html>
