--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
    <p>this is new project</p> 
    <h2>h2 added here by ii</h2>
    <h1>zaid has made a change</h1>
-    <h2>my bame is aamir hassan kachkar</h2>
+    <h2>my name is aamir hassan kachkar</h2>
 </body>
 </html>
